--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,12 @@
-body {
-    background-color: lightblue;
+body{
+    font: 15px/1.5 Arial, Helvetica,sans-serif;
+    padding:0;
+    margin:0;
+    background-color:#f4f4f4;
   }
   
-  h1 {
-    color: white;
-    text-align: center;
-  }
-  
-  p {
-    font-family: verdana;
-    font-size: 20px;
+.container{
+    width:80%; 
+    margin:auto;
+    overflow:hidden;
   }
