--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,14 @@ header{
     text-align:center;
     color:#ffffff;
   }
+
+  #showcase h1{
+    margin-top:100px;
+    font-size:55px;
+    margin-bottom:10px;
+  }
+  
+  #showcase p{
+    font-size:20px;
+  }
+  
